Add  name, email, and number inputs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link href="styles.css" rel="stylesheet"> 
   <head>
   <body>
-    <h1>Survey Form</h1>
+    <form id="survey-form">
+      <h1 id="title">Survey Form</h1>
+      <p id="description">Sample survey format</p>
+      <label id="name-label"> Name: <input id="name" type="text" placeholder="Enter your name" required></label>
+      <label id="email-label"> Email: <input id="email" type="email" placeholder="Enter your Email" required></label>
+      <label id="number-label"> Number: <input id="number" type="number" placeholder="Enter a number" min="0" max="999" required></label>
+    </form>
   </body>
 <html>
