--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
         <p id="description">Sample survey format</p>
       </header>
       <form id="survey-form">
-        <label id="name-label"> Name: <input id="name" type="text" placeholder="Enter your name" required></label>
-        <label id="email-label"> Email: <input id="email" type="email" placeholder="Enter your Email" required></label>
-        <label id="number-label"> Number: <input id="number" type="number" placeholder="Enter a number" min="0" max="999" required></label>
+        <div class="form-group">
+          <label id="name-label" for="name"> Name: </label>
+          <input id="name" type="text" placeholder="Enter your name" required>
+        </div>
+        <div class="form-group">
+        <label id="email-label"> Email: </label>
+        <input id="email" type="email" placeholder="Enter your Email" required>
+        </div>
+        <div class="form-group">
+        <label id="number-label"> Number: </label>
+        <input id="number" type="number" placeholder="Enter a number" min="0" max="999" required>
+        </div>
         <select name="options" id="dropdown">
           <option value="dropdown-option-1">Dropdown Option 1</option>
           <option value="dropdown-option-2">Dropdown Option 2</option>
